# LLMTeam

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PATCHES.md  README.md  README_TESTING_IMPROVEMENTS.md  TESTING_CHANGELOG.md  llmteam-v190-implementation-summary.md  llmteam-v200-P2-improvements.md  llmteam-v4.1-architecture-package.md  llmteam_tasks_for_claude_code_v2.md  llmteam_v2_0_0_analysis_v2.md  v190-workflow-runtime.md
llmteam/: .env.example  CHANGELOG.md  Dockerfile  Makefile  QUICKSTART_TESTING.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  run_tests.py
llmteam/.github/: dependabot.yml
llmteam/.github/workflows/: ci.yml
llmteam/docs/: index.md
llmteam/docs/getting-started/: installation.md  quickstart.md
llmteam/examples/: __init__.py  content_pipeline.py  dynamic_demo.py  live_builder_test.py  live_demo.py  multi_agent_demo.py  orchestrator_driven_demo.py
llmteam/playground/: .gitignore  __init__.py  __main__.py  app.py
llmteam/src/llmteam/: __init__.py  _compat.py  compat.py  exceptions.py  team.py
llmteam/src/llmteam/actions/: executor.py
llmteam/src/llmteam/agents/: __init__.py  base.py  config.py  factory.py  kag_agent.py  llm_agent.py  orchestrator.py  prompts.py  rag_agent.py  retry.py
llmteam/src/llmteam/api/: __init__.py  app.py  health.py  models.py
llmteam/src/llmteam/audit/: models.py  trail.py
llmteam/src/llmteam/builder/: __init__.py  dynamic.py  prompts.py
llmteam/src/llmteam/canvas/: __init__.py  catalog.py  exceptions.py  models.py  runner.py  validation.py  widget.py
llmteam/src/llmteam/cli/: main.py
llmteam/src/llmteam/clients/: __init__.py
llmteam/src/llmteam/configuration/: __init__.py  configurator.py  models.py  prompts.py  (+1 more)
llmteam/tests/: conftest.py
llmteam/tests/agents/: test_config.py  test_orchestrator.py  test_presets.py  test_rag_outofbox.py
llmteam/tests/api/: test_health.py
llmteam/tests/builder/: test_dynamic.py
llmteam/tests/canvas/: test_catalog.py  test_condition_handler.py  test_handlers.py  test_http_handler.py  test_llm_handler.py  test_loop_error_handlers.py  test_models.py  test_runner.py  test_subworkflow_handler.py  test_switch_handler.py  test_team_handler.py  test_transform_handler.py
llmteam/tests/cli/: test_cli.py
llmteam/tests/configuration/: test_configurator.py
llmteam/tests/core/: test_builtin_tools.py  test_period_budget.py  test_provider_tools.py
llmteam/tests/documents/: __init__.py  test_chunkers.py  test_loaders.py
llmteam/tests/e2e/: test_workflow_execution.py
llmteam/tests/embeddings/: test_embeddings.py
llmteam/tests/engine/: test_catalog.py  test_condition_handler.py  test_handlers.py  test_http_handler.py  test_llm_handler.py  test_loop_error_handlers.py  test_models.py  test_runner.py  test_subworkflow_handler.py  test_switch_handler.py  test_team_handler.py  test_transform_handler.py
llmteam/tests/examples/: test_content_pipeline.py
llmteam/tests/orchestration/: test_group_unification.py
llmteam/tests/quality/: test_quality_integration.py  test_team_quality.py
llmteam/tests/roles/: test_contract.py  test_escalation.py  test_group_orch.py  test_orchestration.py  test_pipeline_orch.py
llmteam/tests/team/: test_converters.py  test_team.py
llmteam/tests/transport/: test_bus.py
llmteam/tests/vectorstores/: __init__.py  test_memory.py
(+164 files in other folders)
